Added fitst code

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,17 @@
-#
+pipeline {
+    agent any
+    stages{
+        stage('Build'){
+            steps {
+                sh 'mvn clean package'
+            }
+            post {
+                success {
+                    echo 'Now Archiving...'
+                    archiveartifacts artifacts: '**/target/*.war'
+                }
+            }
+
+        }
+    }
+}
